<resources>
    <string name="app_name">卡片盒子</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CardBox</string>
    <string name="title_description">卡片盒子</string>
    <string name="setting_title_description">设置</string>
    <string name="detail_describe">人物小传</string>
    <string name="btn_open_app">开启卡片盒子</string>
    <string name="introduce_one">还记得小当家干脆面么?</string>
    <string name="introduce_two">还记得水浒英雄卡么?</string>
    <string name="introduce_three">还记得和你换卡的同学么?</string>
    <string name="introduce_four">你是否也开始怀念童年的时光?</string>
    <string name="introduce_five">那就让我们一起找回</string>
    <string name="introduce_six">那份简单的快乐吧!</string>
    <string name="suggestion_one">你可以发送新浪微博同时  @leeccncdl@卡片盒子，反馈您的宝贵意见</string>
    <string name="suggestion_two">同时也欢迎您给作者 limingdl@yeah.net 发送电子邮件</string>
    <string name="suggestion_three">感谢您的支持与鼓励</string>
    <string name="intruduce_pages">进入欢迎页</string>
  	<string name="author">作者:leeccncdl</string>
    <string name="mGrammar_id">3a28d9e69e06e425995bb3722898ef02</string>
    <string name="recommend_app">推荐应用</string>
    <string name="yaoyiyao">摇一摇换背景</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于</string>
    <string name="h1">呼保义－宋江</string>
    <string name="h2">玉麒麟－卢俊义</string>
    <string name="h3">智多星－吴用</string>
    <string name="h4">入云龙－公孙胜</string>
    <string name="h5">大刀-关胜</string>
    <string name="h6">豹子头-林冲</string>
    <string name="h7">霹雳火－秦明</string>
    <string name="h8">双鞭－呼延灼</string>
    <string name="h9">小李广－花荣</string>
    <string name="h10">小旋风－柴进</string>
    <string name="h11">扑天雕－李应</string>
    <string name="h12">美髯公-朱仝</string>
    <string name="h13">花和尚－鲁智深</string>
    <string name="h14">行者-武松</string>
    <string name="h15">双枪将－董平</string>
    <string name="h16">没羽箭-张清</string>
    <string name="h17">青面兽－杨志</string>
    <string name="h18">金枪手－徐宁</string>
    <string name="h19">急先锋-索超</string>
    <string name="h20">神行太保－戴宗</string>
    <string name="h21">赤发鬼－刘唐</string>
    <string name="h22">黑旋风－李逵</string>
    <string name="h23">九纹龙－史进</string>
    <string name="h24">没遮拦-穆弘</string>
    <string name="h25">插翅虎－雷横</string>
    <string name="h26">混江龙-李俊</string>
    <string name="h27">立地太岁－阮小二</string>
    <string name="h28">船火儿－张横</string>
    <string name="h29">短命二郞－阮小五</string>
    <string name="h30">浪里白条－张顺</string>
    <string name="h31">活阎罗－阮小七</string>
    <string name="h32">病关索-杨雄</string>
    <string name="h33">拼命三郎-石秀</string>
    <string name="h34">两头蛇－解珍</string>
    <string name="h35">双尾蝎－解宝</string>
    <string name="h36">浪子－燕青</string>
    <string name="h37">神机军师－朱武</string>
    <string name="h38">镇三山-黄信</string>
    <string name="h39">病尉迟－孙立</string>
    <string name="h40">丑郡马－宣赞</string>
    <string name="h41">井木犴－郝思文</string>
    <string name="h42">百胜将－韩滔</string>
    <string name="h43">天目将－彭玘</string>
    <string name="h44">圣水将－单廷圭</string>
    <string name="h45">神火将-魏定国</string>
    <string name="h46">圣手书生－萧让</string>
    <string name="h47">铁面孔目－裴宣</string>
    <string name="h48">摩云金翅－鸥鹏</string>
    <string name="h49">火眼狻猊－邓飞</string>
    <string name="h50">锦毛虎－燕顺</string>
    <string name="h51">锦豹子-杨林</string>
    <string name="h52">轰天雷－凌振</string>
    <string name="h53">神算子－蒋敬</string>
    <string name="h54">小温侯－吕方</string>
    <string name="h55">赛仁贵－郭盛</string>
    <string name="h56">神医-安道全</string>
    <string name="h57">紫髯伯－皇甫瑞</string>
    <string name="h58">矮脚虎－王英</string>
    <string name="h59">一丈青－扈三娘</string>
    <string name="h60">丧门神－鲍旭</string>
    <string name="h61">混世魔王－樊瑞</string>
    <string name="h62">毛头星－孔明</string>
    <string name="h63">独火星－孔亮</string>
    <string name="h64">八臂哪吒－项充</string>
    <string name="h65">飞天大圣－李衮</string>
    <string name="h66">玉臂匠－金大坚</string>
    <string name="h67">铁笛仙－马麟</string>
    <string name="h68">出洞蛟－童威</string>
    <string name="h69">翻江蜃－童猛</string>
    <string name="h70">玉幡－孟康</string>
    <string name="h71">通臂猿－侯健</string>
    <string name="h72">跳涧虎－陈达</string>
    <string name="h73">白花蛇－杨春</string>
    <string name="h74">白面郞君－郑天寿</string>
    <string name="h75">九尾龟－陶宗旺</string>
    <string name="h76">铁扇子－宋清</string>
    <string name="h77">铁叫子－乐和</string>
    <string name="h78">花项虎－龚旺</string>
    <string name="h79">中箭虎－丁得孙</string>
    <string name="h80">小遮拦－穆春</string>
    <string name="h81">操刀鬼－曹正</string>
    <string name="h82">云里金刚－宋万</string>
    <string name="h83">摸着天－杜迁</string>
    <string name="h84">病大虫－薛永</string>
    <string name="h85">金眼彪－施恩</string>
    <string name="h86">小霸王-周通</string>
    <string name="h87">打虎将－李忠</string>
    <string name="h88">鬼脸儿－杜兴</string>
    <string name="h89">金钱豹子－汤隆</string>
    <string name="h90">独角龙－邹润</string>
    <string name="h91">出林龙－邹渊</string>
    <string name="h92">笑面虎－朱富</string>
    <string name="h93">旱地忽律－朱贵</string>
    <string name="h94">铁臂膊-蔡福</string>
    <string name="h95">一枝花－蔡庆</string>
    <string name="h96">催命判官－李立</string>
    <string name="h97">青眼虎－李云</string>
    <string name="h98">没面目-焦挺</string>
    <string name="h99">石将军－石勇</string>
    <string name="h100">小尉迟－孙新</string>
    <string name="h101">母大虫－顾大嫂</string>
    <string name="h102">菜园子－张青</string>
    <string name="h103">母夜叉－孙二娘</string>
    <string name="h104">活闪婆－王定六</string>
    <string name="h105">险道神－郁保四</string>
    <string name="h106">白日鼠-白胜</string>
    <string name="h107">鼓上蚤－时迁</string>
    <string name="h108">金毛犬－段景住</string>
    <string name="hs1">天罡：天魁星</string>
    <string name="hs2">天罡：天罡星</string>
    <string name="hs3">天罡：天机星</string>
    <string name="hs4">天罡：天闲星</string>
    <string name="hs5">天罡：天勇星</string>
    <string name="hs6">天罡：天雄星</string>
    <string name="hs7">天罡：天猛星</string>
    <string name="hs8">天罡：天威星</string>
    <string name="hs9">天罡：天英星</string>
    <string name="hs10">天罡：天贵星</string>
    <string name="hs11">天罡：天富星</string>
    <string name="hs12">天罡：天满星</string>
    <string name="hs13">天罡：天孤星</string>
    <string name="hs14">天罡：天伤星</string>
    <string name="hs15">天罡：天立星</string>
    <string name="hs16">天罡：天捷星</string>
    <string name="hs17">天罡：天暗星</string>
    <string name="hs18">天罡：天佑星</string>
    <string name="hs19">天罡：天空星</string>
    <string name="hs20">天罡：天速星</string>
    <string name="hs21">天罡：天异星</string>
    <string name="hs22">天罡：天杀星</string>
    <string name="hs23">天罡：天微星</string>
    <string name="hs24">天罡：天究星</string>
    <string name="hs25">天罡：天退星</string>
    <string name="hs26">天罡：天寿星</string>
    <string name="hs27">天罡：天剑星</string>
    <string name="hs28">天罡：天平星</string>
    <string name="hs29">天罡：天罪星</string>
    <string name="hs30">天罡：天损星</string>
    <string name="hs31">天罡：天败星</string>
    <string name="hs32">天罡：天牢星</string>
    <string name="hs33">天罡：天慧星</string>
    <string name="hs34">天罡：天暴星</string>
    <string name="hs35">天罡：天哭星</string>
    <string name="hs36">天罡：天巧星</string>
    <string name="hs37">地煞：地魁星</string>
    <string name="hs38">地煞：地煞星</string>
    <string name="hs39">地煞：地勇星</string>
    <string name="hs40">地煞：地杰星</string>
    <string name="hs41">地煞：地雄星</string>
    <string name="hs42">地煞：地威星</string>
    <string name="hs43">地煞：地英星</string>
    <string name="hs44">地煞：地奇星</string>
    <string name="hs45">地煞：地猛星</string>
    <string name="hs46">地煞：地文星</string>
    <string name="hs47">地煞：地正星</string>
    <string name="hs48">地煞：地辟星</string>
    <string name="hs49">地煞：地阖星</string>
    <string name="hs50">地煞：地强星</string>
    <string name="hs51">地煞：地暗星</string>
    <string name="hs52">地煞：地轴星</string>
    <string name="hs53">地煞：地轴星</string>
    <string name="hs54">地煞：地佐星</string>
    <string name="hs55">地煞：地佑星</string>
    <string name="hs56">地煞：地灵星</string>
    <string name="hs57">地煞：地兽星</string>
    <string name="hs58">地煞：地微星</string>
    <string name="hs59">地煞：地慧星</string>
    <string name="hs60">地煞：地暴星</string>
    <string name="hs61">地煞：地默星</string>
    <string name="hs62">地煞：地猖星</string>
    <string name="hs63">地煞：地狂星</string>
    <string name="hs64">地煞：地飞星</string>
    <string name="hs65">地煞：地走星</string>
    <string name="hs66">地煞：地巧星</string>
    <string name="hs67">地煞：地明星</string>
    <string name="hs68">地煞：地进星</string>
    <string name="hs69">地煞：地退星</string>
    <string name="hs70">地煞：地满星</string>
    <string name="hs71">地煞：地遂星</string>
    <string name="hs72">地煞：地周星</string>
    <string name="hs73">地煞：地隐星</string>
    <string name="hs74">地煞：地异星</string>
    <string name="hs75">地煞：地理星</string>
    <string name="hs76">地煞：地俊星</string>
    <string name="hs77">地煞：地乐星</string>
    <string name="hs78">地煞：地捷星</string>
    <string name="hs79">地煞：地速星</string>
    <string name="hs80">地煞：地镇星</string>
    <string name="hs81">地煞：地嵇星</string>
    <string name="hs82">地煞：地魔星</string>
    <string name="hs83">地煞：地妖星</string>
    <string name="hs84">地煞：地幽星</string>
    <string name="hs85">地煞：地伏星</string>
    <string name="hs86">地煞：地空星</string>
    <string name="hs87">地煞：地僻星</string>
    <string name="hs88">地煞：地全星</string>
    <string name="hs89">地煞：地孤星</string>
    <string name="hs90">地煞：地角星</string>
    <string name="hs91">地煞：地短星</string>
    <string name="hs92">地煞：地藏星</string>
    <string name="hs93">地煞：地囚星</string>
    <string name="hs94">地煞：地平星</string>
    <string name="hs95">地煞：地损星</string>
    <string name="hs96">地煞：地奴星</string>
    <string name="hs97">地煞：地察星</string>
    <string name="hs98">地煞：地恶星</string>
    <string name="hs99">地煞：地丑星</string>
    <string name="hs100">地煞：地数星</string>
    <string name="hs101">地煞：地阴星</string>
    <string name="hs102">地煞：地刑星</string>
    <string name="hs103">地煞：地壮星</string>
    <string name="hs104">地煞：地劣星</string>
    <string name="hs105">地煞：地健星</string>
    <string name="hs106">地煞：地耗星</string>
    <string name="hs107">地煞：地贼星</string>
    <string name="hs108">地煞：地狗星</string>
    <string name="hz1">职位：总督兵马大元帅</string>
    <string name="hz2">玉麒麟－卢俊义</string>
    <string name="hz3">智多星－吴用</string>
    <string name="hz4">入云龙－公孙胜</string>
    <string name="hz5">大刀-关胜</string>
    <string name="hz6">豹子头-林冲</string>
    <string name="hz7">霹雳火－秦明</string>
    <string name="hz8">双鞭－呼延灼</string>
    <string name="hz9">小李广－花荣</string>
    <string name="hz10">小旋风－柴进</string>
    <string name="hz11">扑天雕－李应</string>
    <string name="hz12">美髯公-朱仝</string>
    <string name="hz13">花和尚－鲁智深</string>
    <string name="hz14">行者-武松</string>
    <string name="hz15">双枪将－董平</string>
    <string name="hz16">没羽箭-张清</string>
    <string name="hz17">青面兽－杨志</string>
    <string name="hz18">金枪手－徐宁</string>
    <string name="hz19">急先锋-索超</string>
    <string name="hz20">神行太保－戴宗</string>
    <string name="hz21">赤发鬼－刘唐</string>
    <string name="hz22">黑旋风－李逵</string>
    <string name="hz23">九纹龙－史进</string>
    <string name="hz24">没遮拦-穆弘</string>
    <string name="hz25">插翅虎－雷横</string>
    <string name="hz26">混江龙-李俊</string>
    <string name="hz27">立地太岁－阮小二</string>
    <string name="hz28">船火儿－张横</string>
    <string name="hz29">短命二郞－阮小五</string>
    <string name="hz30">浪里白条－张顺</string>
    <string name="hz31">活阎罗－阮小七</string>
    <string name="hz32">病关索-杨雄</string>
    <string name="hz33">拼命三郎-石秀</string>
    <string name="hz34">两头蛇－解珍</string>
    <string name="hz35">双尾蝎－解宝</string>
    <string name="hz36">浪子－燕青</string>
    <string name="hz37">神机军师－朱武</string>
    <string name="hz38">镇三山-黄信</string>
    <string name="hz39">病尉迟－孙立</string>
    <string name="hz40">丑郡马－宣赞</string>
    <string name="hz41">井木犴－郝思文</string>
    <string name="hz42">百胜将－韩滔</string>
    <string name="hz43">天目将－彭玘</string>
    <string name="hz44">圣水将－单廷圭</string>
    <string name="hz45">神火将-魏定国</string>
    <string name="hz46">圣手书生－萧让</string>
    <string name="hz47">铁面孔目－裴宣</string>
    <string name="hz48">摩云金翅－鸥鹏</string>
    <string name="hz49">火眼狻猊－邓飞</string>
    <string name="hz50">锦毛虎－燕顺</string>
    <string name="hz51">锦豹子-杨林</string>
    <string name="hz52">轰天雷－凌振</string>
    <string name="hz53">神算子－蒋敬</string>
    <string name="hz54">小温侯－吕方</string>
</resources>