<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:orientation="vertical" >

    <FrameLayout
        style="@style/layout_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/about_back"
            style="@style/layout_wrap"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/backx" />

        <TextView
            style="@style/layout_full"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#000000"
            android:textSize="26sp" />
    </FrameLayout>

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="8"
        android:orientation="vertical" >

        <ImageView
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:layout_marginTop ="10dp"
            android:text="@string/app_name"
            android:textColor="#333333"
            android:textSize="18sp" />

        <TextView
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/author"
            android:textColor="#333333"
            android:textSize="18sp" />

        <Button
            android:id="@+id/introduce_bt"
			style="@style/layout_wrap"
			android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/intruduce_pages"
            android:textColor="@color/TextColor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>