<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <cn.zytec.lee.introduce.MyScrollLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/w01" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="89dp"
                android:text="@string/introduce_one"
                android:textColor="@color/TextColor"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/w02" >

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="96dp"
                android:gravity="center_horizontal"
                android:text="@string/introduce_two"
                android:textColor="@color/TextColor"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/w03" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="96dp"
                android:text="@string/introduce_three"
                android:textColor="@color/TextColor"
                android:textSize="18sp" />
        </RelativeLayout>
        <!--
      <RelativeLayout  android:background="@drawable/w04"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  />
      <RelativeLayout  android:background="@drawable/w05"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  />
      <RelativeLayout  android:background="@drawable/w06"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  />
      <RelativeLayout  android:background="@drawable/w07"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  />
      <RelativeLayout  android:background="@drawable/w08"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  />
        -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/w01" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="96dp"
                android:text="@string/introduce_four"
                android:textColor="@color/TextColor"
                android:textSize="18sp" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="98dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_bg"
                android:text="@string/btn_open_app"
                android:textColor="@color/TextColor"
                android:textSize="18sp" />
        </RelativeLayout>
    </cn.zytec.lee.introduce.MyScrollLayout>

    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24.0dip"
        android:orientation="horizontal"
        android:visibility="visible" >

        <!--
        <ImageView android:clickable="true"  android:padding="5.0dip" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5.0dip"
            android:src="@drawable/page_indicator_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5.0dip"
            android:src="@drawable/page_indicator_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5.0dip"
            android:src="@drawable/page_indicator_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:padding="5.0dip"
            android:src="@drawable/page_indicator_bg" />
    </LinearLayout>
    <!--
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/animLayout"
        >
        <LinearLayout
            android:id="@+id/leftLayout" 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_left"/>
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_left_m"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/rightLayout" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_right_m"/>
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_right"/>
        </LinearLayout>
    </LinearLayout> 
    -->

</RelativeLayout>